modified the code style in the documentation to ensure consistent display in both light mode and dark mode.

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -25,7 +25,7 @@
   ;
 
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(120, 120, 0, 0.3);
   --fm-annotation-green: #00a000;
   --fm-annotation-orange: #e28200;
   --fm-background: white;
